import groovy.json.JsonOutput
import groovy.json.JsonSlurper
import io.github.offz.githubPackage

plugins {
    idea
    java
    alias(libs.plugins.githubPackages)
    alias(libs.plugins.modDevGradle)
}

// Allows local configuration.
// Edit the generated `dev.gradle` file
//
// ext {
//     minify_resources = false
//     use_advanced_class_redefinition = true
// }
// Properties that can be configured are:
// "minify_resources" (suggested `false` for faster build times)
// "use_advanced_class_redefinition" for the magic Jetbrains JDK hotswaps
file("./dev.gradle").createNewFile()
apply(from = "dev.gradle")

// Mod stuff
val modID = "sns"
val modName: String = "Sacks \'N Such"

val mixinConfig: String = "sacks-n-such.mixins.json"
val datagenOutput: String = "src/generated/resources"

val minifyResources: Boolean = project.findProperty("minify_resources") as Boolean? ?: true
val useAdvancedClassRedef: Boolean = project.findProperty("use_advanced_class_redefinition") as Boolean? ?: false

val modVersion: String = System.getenv("VERSION") ?: "0.0.0-indev"

val generateModMetadata = tasks.register<ProcessResources>("generateModMetadata") {
    val modReplacementProperties = mapOf(
        "modId" to modID,
        "modName" to modName,
        "modVersion" to modVersion,
    )
    inputs.properties(modReplacementProperties)
    expand(modReplacementProperties)
    from("src/main/templates")
    into(layout.buildDirectory.dir("generated/sources/modMetadata"))
}

base {
    archivesName.set("$modName-${libs.versions.minecraft.get()}")
    group = "mod.traister101" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
    version = modVersion
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

println(
    "Java: ${System.getProperty("java.version")}, JVM: ${System.getProperty("java.vm.version")} (${System.getProperty("java.vendor")}), Arch: ${
        System.getProperty(
            "os.arch"
        )
    }"
)

// Include resources generated by data generators
sourceSets {
    main {
        resources {
            srcDir(datagenOutput)
            srcDir(generateModMetadata)
        }
    }
    create("datagen")
}

configurations {
    get("datagenCompileClasspath").extendsFrom(compileClasspath.get())
    get("datagenRuntimeClasspath").extendsFrom(runtimeClasspath.get())
}

neoForge {
    version = libs.versions.neoforge.get()
    addModdingDependenciesTo(sourceSets["datagen"])
    ideSyncTask(generateModMetadata)

    parchment {
        mappingsVersion = libs.versions.parchment
        minecraftVersion = libs.versions.parchmentMinecraft
    }

    mods {
        create(modID) {
            sourceSet(sourceSets.main.get())
        }
    }

    runs {
        configureEach {
            systemProperty("forge.logging.markers", "REGISTRIES")
            logLevel = org.slf4j.event.Level.DEBUG

            if (useAdvancedClassRedef) {
                jvmArgument("-XX:+AllowEnhancedClassRedefinition")
            }
        }

        register("client") {
            client()
            gameDirectory = file("run/client")

            jvmArguments.addAll("-ea", "-Xmx4G", "-Xms4G")

            systemProperty("neoforge.enabledGameTestNamespaces", modID)
        }

        register("server") {
            server()
            gameDirectory = file("run/server")

            programArgument("--nogui")
        }

        register("datagen") {
            data()
            gameDirectory = file("run/datagen")

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll(
                "--mod",
                modID,
                "--all",
                "--output",
                file(datagenOutput).path,
                "--existing",
                file("src/main/resources").path,
                "--existing-mod",
                "tfc"
            )
            mods {
                getByName(modID) {
                    sourceSet(sourceSets["datagen"])
                }
            }
        }
    }
}

repositories {
    maven {
        name = "Curse maven"
        url = uri("https://www.cursemaven.com")
        content {
            includeGroup("curse.maven")
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = uri("https://api.modrinth.com/maven")
            }
        }
        filter { includeGroup("maven.modrinth") }
    }
    maven {
        name = "BlameJared maven"
        url = uri("https://maven.blamejared.com/")
        content {
            includeGroup("mezz.jei")
            includeGroup("vazkii.patchouli")
        }
    }
    maven {
        name = "Illusive Soulworks maven"
        url = uri("https://maven.theillusivec4.top/")
        content {
            includeGroup("top.theillusivec4.curios")
        }
    }
    // Mirror for JEI and patchouli
    maven {
        name = "Mod maven"
        url = uri("https://modmaven.k-4u.nl")
        content {
            includeGroup("mezz.jei")
            includeGroup("vazkii.patchouli")
        }
    }
}

dependencies {
    "datagenImplementation"(sourceSets["main"].output)
    api("org.jetbrains:annotations:24.0.0")

    // Lombok because yes
    compileOnly(libs.lombok)
    annotationProcessor(libs.lombok)

    // TFC
    implementation(libs.tfc)

    // Mixin Extras
    annotationProcessor(libs.mixinExtras.common)
    compileOnly(libs.mixinExtras.common)
    implementation(libs.mixinExtras.neoforge)
    jarJar(libs.mixinExtras.neoforge) {
        version {
            strictly(libs.versions.mixinExtras.get())
        }
    }

    // Patchouli
    compileOnly(libs.patchouli) {
        artifact {
            classifier = "api"
        }
    }
    runtimeOnly(libs.patchouli)

    // Curios
    compileOnly(variantOf(libs.curios) { classifier("api") })
    runtimeOnly(libs.curios)
}

idea {
    module {
        isDownloadJavadoc = true
        isDownloadSources = true

        // Add directory exclusions
        val excludes = arrayOf(
            "run", ".gradle", "build", ".idea", "src/generated/resources/.cache", "resources/models", "resources/.idea"
        ).map { file(it) }
        excludeDirs.addAll(excludes)
    }
}

tasks {
    jar {
        from(sourceSets["datagen"].output)
        manifest {
            attributes["Specification-Title"] = modName
            attributes["Specification-Vendor"] = "traister101"
            attributes["Specification-Version"] = project.version
            attributes["Implementation-Title"] = project.name
            attributes["Implementation-Version"] = project.version
            attributes["Implementation-Vendor"] = "traister101"
            attributes["MixinConfigs"] = mixinConfig
        }
    }

    processResources {
        if (minifyResources) {
            doLast {
                val jsonMinifyStart: Long = System.currentTimeMillis()
                var jsonMinified: Long = 0
                var jsonBytesBefore: Long = 0
                var jsonBytesAfter: Long = 0

                fileTree(mapOf("dir" to outputs.files.asPath, "include" to "**/*.json")).forEach {
                    jsonMinified++
                    jsonBytesBefore += it.length()
                    try {
                        it.writeText(JsonOutput.toJson(JsonSlurper().parse(it)))
                    } catch (e: Exception) {
                        println("JSON Error in ${it.path}")
                        throw e
                    }

                    jsonBytesAfter += it.length()
                }
                println("Minified $jsonMinified json files. Reduced ${jsonBytesBefore / 1024} kB to ${(jsonBytesAfter / 1024)} kB. Took ${System.currentTimeMillis() - jsonMinifyStart} ms")
            }
        }
    }

    withType<JavaCompile>().configureEach {
        options.encoding = "UTF-8"
        options.compilerArgs.addAll(arrayOf("-Xlint:all,-processing", "-Werror"))
    }
}
